[build-system]
requires = ["setuptools >= 77.0.3","wheel","cython==0.29.32","numpy"]
build-backend = "setuptools.build_meta"

[project]
name="classic_trees"
version="0.0.1"
authors = [
    {name="M. Braun"}
]
description = "A new code to generate dark mater halo merger trees directly from running CLASS, for use with semi-analytical galaxy modeling codes."
readme = "README.md"
requires-python = ">=3.5"


dependencies = [
    "tqdm",
    "classy",
    "scipy",
    "h5py",
    "astropy"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/MarkMos/CLASSIC-trees.git"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]